# GKlib_cmake

./: CMakeLists.txt
tests/: CMakeLists.txt
